# fe02y-stocks

./: package-lock.json  package.json  vite.config.ts.timestamp-1682780931961-da20c03c5837f.mjs
src/: App.tsx  global.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: grow.rs  main.rs  nse_data.rs
src-tauri/stock-screener-lib/: Cargo.toml
src-tauri/stock-screener-lib/src/: grow.rs  indexes.rs  lib.rs  nsestocks.rs  performance.rs
src-tauri/stock-screener-lib/src/grow/: search.rs  stock_data.rs
src-tauri/stock-screener-lib/src/grow/search/: content.rs
src-tauri/stock-screener-lib/src/grow/stock_data/: details.rs  expert_rating.rs  fundamental.rs  header.rs  price_data.rs  stats.rs
src-tauri/stock-screener-lib/src/indexes/: index_response.rs  indexcode.rs  nse.rs
src-tauri/stock-screener-lib/src/nsestocks/: allstocks.rs  stock.rs
src-tauri/stock-screener-lib/src/performance/: performance_response.rs  top_gainers.rs  top_losers.rs  top_volume.rs
src/components/header/: HeaderComponent.tsx
src/components/nse/: NiftyIndexComponent.tsx  NseComponent.tsx  PerformanceStocks.tsx
src/components/stock/: Stock.tsx
src/components/table/: TableComponent.tsx
src/components/thridParty/: ThridParty.tsx
src/components/thridParty/search/: SearchBar.tsx  (+1 more)
src/components/watchlist/: WatchList.tsx
src/context/: AppSwitcher.tsx  ListContext.tsx  nse.tsx  thridparty.tsx
src/models/: AllStockModel.ts  AppSwitcherModel.ts  IndexesModel.ts  ListContextModel.ts  PerformanceStock.ts  SearchStockModel.ts  Stock.ts  nseContextModel.ts
