[package]
name = "stock-screener-lib"
version = "0.0.1"
edition = "2021"
description = "Stock Screener Library"
authors = ["ritik ranjan"]
license = "MIT"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dev-dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-test = { version = "0.4.2"}

[dependencies]
reqwest = "0.11.16"
serde = { version = "1.0.0", features=["derive"] }
serde_json = "1.0.0"

